...
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="用户名" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EpE-PJ-Jj2">
                                <rect key="frame" x="20" y="20" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="密码" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3h6-kg-soI">
                                <rect key="frame" x="20" y="58" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="done" secureTextEntry="YES"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MXv-wO-wrJ">
                                <rect key="frame" x="20" y="96" width="560" height="30"/>
                                <state key="normal" title="Login"/>
                                <connections>
                                    <action selector="onLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A9m-kI-1dP"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
...
                        <viewControllerLayoutGuide type="bottom" id="s4S-Pg-LFX"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="bbM-Nh-XJg">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="搜索关键字" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="afh-SV-Rtg">
                                <rect key="frame" x="20" y="72" width="560" height="30"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="alphabet" returnKeyType="search"/>
                            </textField>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="afh-SV-Rtg" firstAttribute="top" secondItem="Rkt-53-sRt" secondAttribute="bottom" constant="8" id="ckr-5B-xFA"/>
                            <constraint firstAttribute="trailing" secondItem="afh-SV-Rtg" secondAttribute="trailing" constant="20" id="fld-IW-0Tl"/>
                            <constraint firstItem="afh-SV-Rtg" firstAttribute="leading" secondItem="bbM-Nh-XJg" secondAttribute="leading" constant="20" id="z3S-ky-tQo"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Search" id="TKa-CY-Kby">
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="5di-tD-opA">
                            <connections>
                                <action selector="onSearch:" destination="oFM-5N-jgb" id="sSU-gC-DYw"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
